fixed extra space when main block is not styled

--- a/scss/skinr-page-options.scss
+++ b/scss/skinr-page-options.scss
@@ -36,5 +36,6 @@
     background: transparent;
     border: none;
     @include single-box-shadow(none);
+    padding-top: 5px;
   }
 }
